[package]
name = "invader-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
log = "0.4.17"
wasm-logger = "0.2.0"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
js-sys = "0.3.60"
anyhow = "1.0.66"

[dependencies.web-sys]
version = "0.3.60"
features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "ImageData",
  "ImageBitmap",
  "Response",
  "AudioContext",
  "AudioBuffer",
  "AudioBufferSourceNode",
  "GainNode",
  "AudioParam",
  "AudioDestinationNode",
]
